atilizando redes sociais

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <h2>Redes Socias</h2>
 <p>
     Instagram: <a href="https://www.instagram.com/keenchyy/">@keenchyy</a>  <br>
-    Facebook: <a href="https://www.instagram.com/keenchyy/">Keiny Rivas</a>  <br
+    Facebook: <a href="https://www.facebook.com/keiny.rivas">Keiny Rivas</a>  <br>
  
 <p>
 <figure>
